--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                         <tbody><tr>
                                             <td style="width: 90px">মালিকের নাম :</td>
                                             <td class="dotted_botton" style="padding-left: 10px;">
-                                        	মমিনুল করিম                                            </td>
+                                        	মমিনুল করিম Suja                                           </td>
                                         </tr>
                                     </tbody></table>
 
