--- a/index.html
+++ b/index.html
@@ -254,13 +254,13 @@
                                     <table style="width:100%;">
                                         <tbody><tr>
                                             <td style="width: 320px;">সিটি কর্পোরেশন /পৌর /ইউনিয়ন ভূমি অফিসের নাম  :</td>
-                                            <td class="dotted_botton">খোড়াগাছ ইউনিয়ন ভূমি অফিস</td>
+                                            <td class="dotted_botton">১৪ নং দূর্গাপুর ইউনিয়ন পরিষদ/td>
                                         </tr>
                                     </tbody></table>
                                     <table style="margin-top:5px; width:100%;">
                                         <tbody><tr>
                                             <td style="width: 130px;">মৌজার ও জে. এল. নং:</td>
-                                            <td class="dotted_botton input_bangla" style="padding: 0 10px 0 5px;">রূপসী - 13</td>
+                                            <td class="dotted_botton input_bangla" style="padding: 0 10px 0 5px;">চিথলী দক্ষিন পাড়া</td>
                                             <td style="width: 105px">উপজেলা / থানা  :</td>
                                             <td class="dotted_botton" style="padding: 0 10px 0 5px;">মিঠাপুকুর</td>
                                             <td style="width: 40px">জেলা:</td>
@@ -272,7 +272,7 @@
                                         <tbody><tr>
                                             <td style="width: 90px">মালিকের নাম :</td>
                                             <td class="dotted_botton" style="padding-left: 10px;">
-                                        	মমিনুল করিম Suja                                           </td>
+                                        	মমিন কম্পিউটারস                                           </td>
                                         </tr>
                                     </tbody></table>
 
@@ -281,7 +281,7 @@
                                             <td style="width: 225px"><!-- ২ নং রেজিস্টার অনুযায়ী হোল্ডিং নম্বার -->
                                             ২ নং রেজিস্টার অনুযায়ী হোল্ডিং নম্বর:</td>
                                             <td class="dotted_botton numeric_bangla" style="padding-left: 10px;">
-                                                2750                                            </td>
+                                                ০১৭-৪৭১                                            </td>
                                         </tr>
                                     </tbody></table>
 
@@ -289,7 +289,7 @@
                                         <tbody><tr>
                                             <td style="width: 75px">খতিয়ান নং:</td>
                                             <td class="dotted_botton numeric_bangla" style="padding-left: 10px;">
-                                                2750                                            </td>
+                                                ০১৭-৪৭১                                            </td>
                                         </tr>
                                     </tbody></table>
                                     <div style="height: 10px"></div>
@@ -306,12 +306,12 @@
                                     </thead>
                                     <tbody style="height: 0px;">
                                                                         <tr>
-                                            <td class="b1 input_bangla">1</td>
+                                            <td class="b1 input_bangla">১</td>
                                             <!-- <td class="b1 input_bangla">2750</td> -->
                                             <td class="b1 input_bangla">1000</td>
                                             <td class="b1">
                                                 দলা(                                                কৃষি২)                                            </td>
-                                            <td class="b1 input_bangla">15.50000</td>
+                                            <td class="b1 input_bangla">১৫.৫০০০০</td>
                                         </tr>
                                                                     </tbody>
                                 </table>
@@ -322,7 +322,7 @@
                         <table style="width: 100%;">
                             <tbody><tr>
                                 <td class="b1 text-center" style="width: 50%;">সর্বমোট জমি (শতক)</td>
-                                <td class="b1 input_bangla" style="width: 50%;">15.5</td>
+                                <td class="b1 input_bangla" style="width: 50%;">১৫.৫</td>
                             </tr>
                         </tbody></table>
                         <table class="table table-striped table-bordered table-hover" style="width:100% !important;">
@@ -346,14 +346,14 @@
                             </tr>
 
                             <tr>
-                                <td align="center">০</td>
-                                <td align="center">০</td>
-                                <td align="center">০</td>
-                                <td align="center">৩২</td>
+                                <td align="center">৪৭১</td>
+                                <td align="center">৪৭১</td>
+                                <td align="center">৪৭১</td>
+                                <td align="center">০১৭-৪৭১</td>
                                 <td align="center">
-                                    ৩২</td>
+                                    ০১৭-৪৭১</td>
 
-                                <td align="center">৩২</td>
+                                <td align="center">০১৭-৪৭১</td>
                                 <td align="center">
                                     ০                                </td>
                                 <td align="center"></td>
@@ -361,13 +361,13 @@
                         </tbody></table>
                         <div style="width:100% !important;">
                             <p class="dotted_botton"> সর্বমোট (কথায়):
-                                                                বত্রিশ টাকা মাত্র ।
+                                                                মমিন মামার মোবাইল নাম্বার ।
                             </p>
                         </div>
                         <div class="row" style="width:100% !important; justify-content: center;">
                             <div class="col-md-12">
                                 <div style="width: 290px; float: left;" align="left">
-                                    <p style="margin: 0 !important;"></p><p style="margin: 0 !important;">নোট: সর্বশেষ কর পরিশোধের সাল - ১৪২৯</p><p></p>
+                                    <p style="margin: 0 !important;"></p><p style="margin: 0 !important;">নোট: সর্বশেষ কর পরিশোধের সাল - ১৪৩০</p><p></p>
                                     <p class=""> প্রদানকারির নাম :খোদ্দ</p>
                                     <p>
                                         তারিখ : </p><div style="margin-top: -37px;margin-left: 10px;"><p style="width: 115px;padding: 0;margin: 0;margin-left: 38px;margin-bottom: 2px;">৭ কার্তিক ১৪২৯</p><span style="border-top:1px solid; margin-left:36px;">২৩ অক্টোবর, ২০২২</span><p></p></div>
@@ -382,10 +382,10 @@
                                         <!-- <img src="https://office.land.gov.bd//upload/Signature/2021/09/1632824041.png" width="80" height="50" alt="" style=""> -->
                                         <br>
                                         <br>
-                                        ২৩/১০/২০২২<br>
+                                        ২৫/১২/২২<br>
                                         নজরুল ইসলাম<br>
                                         ইউনিয়ন ভূমি উপ-সহকারি কর্মকর্তা,<br>
-                                        খোড়াগাছ ইউনিয়ন ভূমি অফিস ,মিঠাপুকুর,রংপুর                                                                           
+                                        ১৪ নং দূর্গাপুর ইউনিয়ন ভূমি অফিস ,মিঠাপুকুর,রংপুর                                                                           
                                                                     </div>
                             </div>   
                         </div>   
