--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                         </tr>
                                         <tr>
                                             <td class="text-left">(সংশোধিত)</td>
-                                            <td class="text-right input_bangla">ক্রমিক নং 855822003971</td>
+                                            <td class="text-right input_bangla">ক্রমিক নং ৮৫৫৮২২০০৩৯৭২</td>
                                         </tr>
                                         <tr>
                                             <td class="text-center" colspan="2">
@@ -308,7 +308,7 @@
                                                                         <tr>
                                             <td class="b1 input_bangla">১</td>
                                             <!-- <td class="b1 input_bangla">2750</td> -->
-                                            <td class="b1 input_bangla">1000</td>
+                                            <td class="b1 input_bangla">০১৭</td>
                                             <td class="b1">
                                                 দলা(                                                কৃষি২)                                            </td>
                                             <td class="b1 input_bangla">১৫.৫০০০০</td>
